# python-simpletkgrid

./: .gitignore  LICENSE  README.md  _simpleexample.py  setup.cfg
example/: README.md  define.py
sample/: __init__.py  define.py  gui.py
sample/tktlib/: __init__.py  gui.py  tkt.py
src/simpletkgrid/: __init__.py
