[metadata]
name = simpletkgrid
version = attr: src.simpletkgrid.__version__
url = https://github.com/kihiyuki/python-simpletkgrid
author = kihiyuki
author_email = kihiyuki.11@gmail.com
license = MIT License
license_files = LICENSE
description = Tkinter Simple Grid Library
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    # Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8

[options]
zip_safe = False
package_dir =
    =src
packages = find:
python_requires = >= 3.8

[options.packages.find]
where = src
